fix(frontend): optimize maintenance page on mobile

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -44,6 +44,17 @@
   display: none;
 }
 
+.yourtj-scrollbar-hidden {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.yourtj-scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+}
+
 .yourtj-md-mirror {
   white-space: pre-wrap;
   overflow-wrap: anywhere;
